--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An application to facilitate code academy application process for applicants and help them to complete their applications easily and on time, also help code academy team to track , filter and create applications.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/GSG-G8/applicants-system/issues"
   },
-  "homepage": "https://github.com/GSG-G8/applicants-system#readme"
+  "homepage": "https://github.com/GSG-G8/applicants-system#readme",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "jest": "^25.2.3",
+    "nodemon": "^2.0.2"
+  }
 }
