--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
   },
   "homepage": "https://github.com/GSG-G8/applicants-system#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "serve-favicon": "^2.5.0"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.18.2",
+    "serve-favicon": "^2.5.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "env2": "^2.2.2",
     "jest": "^25.2.3",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
