--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "yup": "^0.28.3"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "jest": "^25.2.3",
     "nodemon": "^2.0.2",
+    "prettier": "^2.0.2",
     "supertest": "^4.0.2"
   }
 }
