--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "An application to facilitate code academy application process for applicants and help them to complete their applications easily and on time, also help code academy team to track , filter and create applications.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "server": "cd server && npm run dev",
+    "client": "cd client && npm start",
+    "test": "jest",
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
+    "kill": "fuser -k 5000/tcp",
+    "kill-run": "npm run kill && npm run server"
   },
   "repository": {
     "type": "git",
@@ -24,7 +30,7 @@
     "env2": "^2.2.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.18.2",
+    "mongoose": "^5.9.6",
     "serve-favicon": "^2.5.0",
     "yup": "^0.28.3"
   },
