--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "NODE_ENV=production node server/index.js",
     "dev": "nodemon server/index.js",
     "kill": "fuser -k 5000/tcp",
-    "kill-run": "npm run kill && npm run server"
+    "kill-run": "npm run kill && npm run server",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
