--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/GSG-G8/applicants-system#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -32,6 +33,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0",
     "yup": "^0.28.3"
   },
