--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "kill": "fuser -k 5000/tcp",
     "kill-run": "npm run kill && npm run server",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "build:database": "NODE_ENV=production node server/database/index.js"
+    "build:database:pro": "NODE_ENV=production node server/database/index.js",
+    "build:database:dev": "NODE_ENV=test node server/database/index.js"
   },
   "repository": {
     "type": "git",
