delete disabled file and put it as props and add props like onchang and placeholder and className #117

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "eslint.workingDirectories": [
+    "./client",
+    "./server"
+  ],
   "editor.formatOnSave": false,
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
