front end rout Error 404 relate #38

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,7 @@
     "source.fixAll": true,
     "prettier.singleQuote": true,
   },
+  "eslint.workingDirectories": [
+    "./client", "./server"
+  ]
 }
