--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "fg-loadcss": "^2.1.0",
     "axios": "^0.19.2",
+    "fg-loadcss": "^2.1.0",
     "material-ui-image": "^3.2.3",
+    "mdbreact": "^4.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
