--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "fg-loadcss": "^2.1.0",
+    "js-cookie": "^2.2.1",
     "material-ui-image": "^3.2.3",
-    "moment": "^2.26.0",
     "mdbreact": "^4.27.0",
+    "moment": "^2.26.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
@@ -22,6 +23,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "universal-cookie": "^4.0.3",
     "yup": "^0.28.3"
   },
   "scripts": {
