create submitted application page with table commponent to show all submitted beside search and sort also padding #51

--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "fg-loadcss": "^2.1.0",
+    "material-table": "^1.59.0",
     "material-ui-image": "^3.2.3",
-    "moment": "^2.26.0",
     "mdbreact": "^4.27.0",
+    "moment": "^2.26.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
